crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i32, b: i32) -> i32 { a << b }\n    pub fn rightshift(a: i32, b: i32) -> i32 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @leftshift(i32 %0, i32 %1) {
body:
  %left_shift = shl i32 %0, %1
  ret i32 %left_shift
}

define i32 @rightshift(i32 %0, i32 %1) {
body:
  %right_shift = ashr i32 %0, %1
  ret i32 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
