crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i64, b: i64) -> i64 { a << b }\n    pub fn rightshift(a: i64, b: i64) -> i64 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i64 @leftshift(i64 %0, i64 %1) {
body:
  %left_shift = shl i64 %0, %1
  ret i64 %left_shift
}

define i64 @rightshift(i64 %0, i64 %1) {
body:
  %right_shift = ashr i64 %0, %1
  ret i64 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
