crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_u128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: u128, b: u128) -> u128 { a << b }\n    pub fn rightshift(a: u128, b: u128) -> u128 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i128 @leftshift(i128 %0, i128 %1) {
body:
  %left_shift = shl i128 %0, %1
  ret i128 %left_shift
}

define i128 @rightshift(i128 %0, i128 %1) {
body:
  %right_shift = lshr i128 %0, %1
  ret i128 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
