crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: u16, b: u16) -> u16 { a << b }\n    pub fn rightshift(a: u16, b: u16) -> u16 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i16 @leftshift(i16 %0, i16 %1) {
body:
  %left_shift = shl i16 %0, %1
  ret i16 %left_shift
}

define i16 @rightshift(i16 %0, i16 %1) {
body:
  %right_shift = lshr i16 %0, %1
  ret i16 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
