crates/mun_codegen/src/snapshots/mun_codegen__test__shift_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: u8, b: u8) -> u8 { a << b }\n    pub fn rightshift(a: u8, b: u8) -> u8 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @leftshift(i8 %0, i8 %1) {
body:
  %left_shift = shl i8 %0, %1
  ret i8 %left_shift
}

define i8 @rightshift(i8 %0, i8 %1) {
body:
  %right_shift = lshr i8 %0, %1
  ret i8 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
